--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,11 @@
 <html>
     <head>
-        <title>Welcome!</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+        <title>CodeCommit(CC)!</title>
     </head>
     <body>
-        <h1>Hello world!</h1>
-        <p>We can build a full webpage here</p>
+        <h1 id="heading">Codeommit</h1>
+        <p>We can build a full webpage </p>
         <form>
             <input type="text" name="nickname" value="Enter your nickname"/>
             <input type="submit" value="Submit"/>
